# cmput201

./: .gitignore
assignments/: assignment1 2.c
assignments/A1/: A1.c  Makefile  assignment1.c  feedback.txt  improvedA1.c  instance_gen  test.c
assignments/A2/: Makefile  README  assignment2.c  compare.c  feedback-2.txt  instance_gen  johnson.c  johnson.h  lpt.c  sort.h  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
assignments/A3/: FeedBack-3.txt  Makefile  assignment3.c  file_print.c  instance_gen
assignments/newA3/: Makefile  README.txt  assignment3.c  assignment3.tar  compare.h  file_print.c  file_print.h  instance_gen  johnson.c  lpt.c  lpt.h  result.txt  sort.c  structs.h
assignments/testingcases/: test1.txt  test2.txt  test4.txt  test6.txt  test7.txt  test8.txt  test9.txt
in_class/: Makefile  a1.c  bubble_sort.c  bufferoverflow.c  fahrenheit.c  fibonacci_improved.c  insertionsort.c  insertionsort.h  int_float_test.c  mdarray.c  mergesort.c  sorting.c  sorting4.c  spointer.c  suboutofrange.c  testscanf.c
labs/lab0/: demo_steps.txt  (+1 more)
labs/lab10/: CMakeLists.txt  Makefile  bubblesort.c  bubblesort.h  heapsort.c  heapsort.h  insertionsort.c  insertionsort.h  mergesort.c  mergesort.h  quicksort.c  quicksort.h  selectionsort.c  selectionsort.h  sorting1498868.c  sorting1498868.h
practice/: Makefile  TwoArrayMedian.c  assignment1_tests.c  dtob.c  equalsss.c  fahr_to_cel.c  fahr_to_celsius.c  greater_than_check.c  heaptest.c  ipluses.c  known_size_array.c  print_multi_array.c  printf_conversions.c  quicksort.c  quiz2.c  scanf.c  test.c  valentine.c
(+55 files in other folders)
